Supported ES3.1 with static background
 - Added Theme Option to turn off and on Background Animations
 - Client has now a mouse if one is connected

--- a/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
+++ b/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
@@ -238,15 +238,15 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Monitory_Client.WidgetIPAddress_Mc_Lf.OnExitButtonPressed",NewName="/Script/Monitory_Client.WidgetIPAddress_Mc_Lf.OnDeleteButtonPressed")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.gamecompany.yourgamename158
+PackageName=com.LukasFratzl.Monitory158
 StoreVersion=1
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
 ApplicationDisplayName=
 VersionDisplayName=1.0
-MinSDKVersion=26
-TargetSDKVersion=22
-InstallLocation=InternalOnly
+MinSDKVersion=19
+TargetSDKVersion=19
+InstallLocation=Auto
 bEnableLint=False
 bPackageDataInsideApk=True
 bCreateAllPlatformsInstall=False
@@ -292,7 +292,7 @@ bAndroidOpenGLSupportsBackbufferSampling=False
 bDetectVulkanByDefault=True
 bBuildWithHiddenSymbolVisibility=True
 bDisableStackProtector=False
-bDisableLibCppSharedDependencyValidation=False
+bDisableLibCppSharedDependencyValidation=True
 bSaveSymbols=False
 bStripShaderReflection=True
 bEnableGooglePlaySupport=False
