--- a/Monitory_Client_Source/Monitory_Client/Config/DefaultGame.ini
+++ b/Monitory_Client_Source/Monitory_Client/Config/DefaultGame.ini
@@ -5,6 +5,6 @@ ProjectVersion=1.0
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Shipping
-FullRebuild=True
+FullRebuild=False
 ForDistribution=True
 
