--- a/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
+++ b/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
@@ -283,7 +283,7 @@ KeyAlias=MyKey
 KeyStorePassword=114o257a
 KeyPassword=114o257a
 bBuildForArm64=True
-bBuildForX8664=True
+bBuildForX8664=False
 bBuildForES31=True
 bSupportsVulkan=True
 bSupportsVulkanSM5=False
