--- a/Monitory_Client_Source/Monitory_Client/Monitory_Client.uproject
+++ b/Monitory_Client_Source/Monitory_Client/Monitory_Client.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{FBC46B81-4462-65DA-F507-3EA7C95C26A2}",
+	"EngineAssociation": "5.2",
 	"Category": "",
 	"Description": "",
 	"Modules": [
