Added Local Time in Client App

--- a/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
+++ b/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
@@ -236,6 +236,8 @@ ManualIPAddress=
 +EnumRedirects=(OldName="/Script/Monitory_Client.EFloatingPoint",NewName="/Script/Monitory_Client.EPrecisionPoint")
 +PropertyRedirects=(OldName="/Script/Monitory_Client.PCData_Mc_Lf.DateName",NewName="/Script/Monitory_Client.PCData_Mc_Lf.DateNow")
 +FunctionRedirects=(OldName="/Script/Monitory_Client.WidgetIPAddress_Mc_Lf.OnExitButtonPressed",NewName="/Script/Monitory_Client.WidgetIPAddress_Mc_Lf.OnDeleteButtonPressed")
++PropertyRedirects=(OldName="/Script/Monitory_Client.WidgetMainMenu_Mc_Lf.TimeNowTextBlock",NewName="/Script/Monitory_Client.WidgetMainMenu_Mc_Lf.TimeNowTextBlock_Server")
++PropertyRedirects=(OldName="/Script/Monitory_Client.WidgetMainMenu_Mc_Lf.DateNowTextBlock",NewName="/Script/Monitory_Client.WidgetMainMenu_Mc_Lf.DateNowTextBlock_Server")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.LukasFratzl.Monitory158
