--- a/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
+++ b/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
@@ -259,7 +259,7 @@ bAllowPatchOBBFile=False
 bAllowOverflowOBBFiles=False
 bUseExternalFilesDir=False
 bPublicLogFiles=True
-Orientation=SensorLandscape
+Orientation=FullSensor
 MaxAspectRatio=2.100000
 bUseDisplayCutout=False
 bRestoreNotificationsOnReboot=False
@@ -290,7 +290,7 @@ bBuildForES31=True
 bSupportsVulkan=True
 bSupportsVulkanSM5=False
 DebugVulkanLayerDirectory=(Path="")
-bAndroidOpenGLSupportsBackbufferSampling=False
+bAndroidOpenGLSupportsBackbufferSampling=True
 bDetectVulkanByDefault=True
 bBuildWithHiddenSymbolVisibility=True
 bDisableStackProtector=False
@@ -342,12 +342,13 @@ bEnableMaliPerfCounters=False
 bMultiTargetFormat_ETC2=True
 bMultiTargetFormat_DXT=True
 bMultiTargetFormat_ASTC=True
-TextureFormatPriority_ETC2=0.200000
-TextureFormatPriority_DXT=0.600000
-TextureFormatPriority_ASTC=0.900000
+TextureFormatPriority_ETC2=1.000000
+TextureFormatPriority_DXT=1.000000
+TextureFormatPriority_ASTC=1.000000
 SDKAPILevelOverride=
 NDKAPILevelOverride=
 BuildToolsOverride=
 bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
+bSupportSizeChanges=True
 
