Removed paid plugins and built custom systems instead

--- a/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
+++ b/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
@@ -238,6 +238,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Monitory_Client.WidgetIPAddress_Mc_Lf.OnExitButtonPressed",NewName="/Script/Monitory_Client.WidgetIPAddress_Mc_Lf.OnDeleteButtonPressed")
 +PropertyRedirects=(OldName="/Script/Monitory_Client.WidgetMainMenu_Mc_Lf.TimeNowTextBlock",NewName="/Script/Monitory_Client.WidgetMainMenu_Mc_Lf.TimeNowTextBlock_Server")
 +PropertyRedirects=(OldName="/Script/Monitory_Client.WidgetMainMenu_Mc_Lf.DateNowTextBlock",NewName="/Script/Monitory_Client.WidgetMainMenu_Mc_Lf.DateNowTextBlock_Server")
++ClassRedirects=(OldName="/Script/Monitory_Client.GraphFillWidget_Mc_Lf",NewName="/Script/Monitory_Client.WidgetGraphFill_Mc_Lf")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 PackageName=com.LukasFratzl.Monitory158
