Fixed Temp and Watt not getting displayed with AMD cpu on linux

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 Monitory_Server_Win/Monitory_Server.sys
+
+Monitory_Server_Linux/net8.0/turbostat_info.txt
+
+Monitory_Server_Linux_Source/Monitory_Server_Linux/bin/Debug/net8.0/turbostat_info.txt
