--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Monitory_Server_Win/Monitory_Server.sys
 Monitory_Server_Linux/net8.0/turbostat_info.txt
 
 Monitory_Server_Linux_Source/Monitory_Server_Linux/bin/Debug/net8.0/turbostat_info.txt
+
+Monitory_Server_Win/Monitory_Server_Windows.sys
