--- a/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
+++ b/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
@@ -247,8 +247,8 @@ StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
 ApplicationDisplayName=
 VersionDisplayName=1.0
-MinSDKVersion=19
-TargetSDKVersion=19
+MinSDKVersion=26
+TargetSDKVersion=26
 InstallLocation=Auto
 bEnableLint=False
 bPackageDataInsideApk=True
@@ -258,11 +258,14 @@ bForceSmallOBBFiles=True
 bAllowLargeOBBFiles=False
 bAllowPatchOBBFile=False
 bAllowOverflowOBBFiles=False
+bDontBundleLibrariesInAPK=False
 bUseExternalFilesDir=False
 bPublicLogFiles=True
 Orientation=FullSensor
 MaxAspectRatio=2.100000
 bUseDisplayCutout=False
+bAllowResizing=False
+bSupportSizeChanges=True
 bRestoreNotificationsOnReboot=False
 bFullScreen=True
 bEnableNewKeyboard=True
@@ -299,9 +302,10 @@ bDisableLibCppSharedDependencyValidation=True
 bSaveSymbols=False
 bStripShaderReflection=True
 bEnableGooglePlaySupport=False
-bUseGetAccounts=False
+RequestCodeForPlayGamesActivities=80002
+PlayGamesClientId=
+bForceRefreshToken=False
 GamesAppID=
-bEnableSnapshots=False
 bSupportAdMob=True
 AdMobAppID=
 TagForChildDirectedTreatment=TAG_FOR_CHILD_DIRECTED_TREATMENT_UNSPECIFIED
@@ -346,10 +350,9 @@ bMultiTargetFormat_ASTC=True
 TextureFormatPriority_ETC2=1.000000
 TextureFormatPriority_DXT=1.000000
 TextureFormatPriority_ASTC=1.000000
-SDKAPILevelOverride=
-NDKAPILevelOverride=
+SDKAPILevelOverride=26
+NDKAPILevelOverride=android-25
 BuildToolsOverride=
 bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
-bSupportSizeChanges=True
 
