Made Get/Set for meters | Made Client graphs reset when switching Server

--- a/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
+++ b/Monitory_Client_Source/Monitory_Client/Config/DefaultEngine.ini
@@ -350,9 +350,9 @@ bMultiTargetFormat_ASTC=True
 TextureFormatPriority_ETC2=1.000000
 TextureFormatPriority_DXT=1.000000
 TextureFormatPriority_ASTC=1.000000
-SDKAPILevelOverride=26
+SDKAPILevelOverride=android-26
 NDKAPILevelOverride=android-25
-BuildToolsOverride=
+BuildToolsOverride=33.0.1
 bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
 
