Fixed app lag on linux

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Monitory_Client_Source/Monitory_Client/Build/Android/project.properties
 Monitory_Client_Source/Monitory_Client/Build/Android/src/
 
 Monitory_Client_Source/Monitory_Client/Build/Android/res/values/
+
+Monitory_Server_Linux_Source/Monitory_Server_Linux/obj/
